# skiff-files

./: .gitignore  A11Y.md  ARCHITECTURE.md  BUNDLE_SIZE.md  CHANGELOG.md  CLAUDE.md  COVERAGE.md  DEV.md  LICENSE.md  README.md  TODO.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: automerge.yml  build.yml  integration.yml  release-beta.yml  release-official.yml
docker/: docker-compose.ci.yml  docker-compose.windows.yml  docker-compose.yml  docker.md
src/: App.test.tsx  App.tsx  __smb-regression.test.tsx  integration.test.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  crash.rs  creds.rs  health.rs  lib.rs  permissions.rs  win_cmd.rs
src-tauri/src/fs/: ftp.rs  icons.rs  known_hosts.rs  local.rs  mod.rs  registry.rs  sftp.rs  smb.rs  ssh_config.rs  thumbnail.rs  types.rs  watch.rs
src-tauri/src/sync/: backend.rs  cross_engine.rs  dedup.rs  engine.rs  mod.rs  plan.rs  registry.rs  repo.rs  resolver.rs  stamp.rs  types.rs
src-tauri/tests/: remote_integration.rs
src/api/: client.test.ts  client.ts  conn.test.ts  conn.ts  creds.test.ts  creds.ts  drag.test.ts  drag.ts  fs.test.ts  fs.ts  permissions.test.ts  permissions.ts  sync.test.ts  sync.ts
src/components/: ArchiveViewerDialog.test.tsx  ArchiveViewerDialog.tsx  BrowserTabs.extra.test.tsx  BrowserTabs.test.tsx  BrowserTabs.tsx  BulkActionBar.extra.test.tsx  BulkActionBar.test.tsx  BulkActionBar.tsx  BulkRenameDialog.test.tsx  BulkRenameDialog.tsx  CommandPalette.test.tsx  CommandPalette.tsx  ConfirmDialog.test.tsx  ConfirmDialog.tsx  ConflictModal.test.tsx  ConflictModal.tsx  DiffDialog.test.tsx  DiffDialog.tsx  EntryContextMenu.extra.test.tsx  EntryContextMenu.test.tsx  EntryContextMenu.tsx  FileList.extra.test.tsx  FileList.test.tsx  FileList.tsx  GalleryThumb.test.tsx  GalleryThumb.tsx  IconForKind.test.tsx  IconForKind.tsx  KindFilterBar.component.test.tsx  KindFilterBar.test.ts  KindFilterBar.tsx  NavBar.tsx  NewEntryDialog.test.tsx  NewEntryDialog.tsx  OperationsDrawer.test.tsx  OperationsDrawer.tsx  PathBar.extra.test.tsx  PathBar.friendly.test.tsx  PathBar.test.tsx  PathBar.tsx  (+35 more)
src/i18n/: en.ts  i18n.test.ts  index.ts
src/pages/: Browser.test.tsx  Browser.tsx  ConnectionsPage.extra.test.tsx  ConnectionsPage.test.tsx  ConnectionsPage.tsx  HomePage.tsx  PreviewWindow.test.tsx  PreviewWindow.tsx  SettingsPage.test.tsx  SettingsPage.tsx  TransfersPage.test.tsx  TransfersPage.tsx
src/state/: connectionDrafts.test.ts  connectionDrafts.ts  connectionStore.extra.test.ts  connectionStore.test.ts  connectionStore.ts  settings.test.tsx  settings.tsx
src/test/: setup.ts
src/theme/: index.ts  theme.extra.test.tsx  (+1 more)
(+70 files in other folders)
