[package]
name = "skiff-files"
version = "0.0.0"
description = "Skiff Files — fast cross-platform file explorer with FTP / SFTP / SMB and a smart-sync engine."
authors = ["Sy Le"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
base64 = "0.22"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "time", "fs"] }
md5 = "0.7"
chrono = "0.4"
trash = "5"
open = "5"
fs4 = "0.13"
russh = "0.45"
russh-sftp = "2"
russh-keys = "0.45"
uuid = { version = "1", features = ["v4"] }
kamadak-exif = "0.6"
sha2 = "0.10"
sysinfo = "0.32"
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"
walkdir = "2"
notify = "7"
rayon = "1"
urlencoding = "2"

[dev-dependencies]
filetime = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
